docs/api/qiskit/0.46/qiskit.providers.basic_provider.BasicProviderJob.mdx
---
title: BasicProviderJob
description: API reference for qiskit.providers.basic_provider.BasicProviderJob
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.basic_provider.BasicProviderJob
---

# BasicProviderJob

<Class id="qiskit.providers.basic_provider.BasicProviderJob" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.46/qiskit/providers/basic_provider/basic_provider_job.py" signature="qiskit.providers.basic_provider.BasicProviderJob(backend, job_id, result)">
  Bases: [`JobV1`](qiskit.providers.JobV1 "qiskit.providers.job.JobV1")

  BasicProviderJob class.

  Initializes the asynchronous job.

  **Parameters**

  *   **backend** – the backend used to run the job.
  *   **job\_id** – a unique id in the context of the backend used to run the job.
  *   **kwargs** – Any key value metadata to associate with this job.

  ## Attributes

  ### version

  <Attribute id="qiskit.providers.basic_provider.BasicProviderJob.version" name="version" attributeValue="= 1" />

  ## Methods

  ### backend

  <Function id="qiskit.providers.basic_provider.BasicProviderJob.backend" name="backend" signature="backend()">
    Return the instance of the backend used for this job.
  </Function>

  ### cancel

  <Function id="qiskit.providers.basic_provider.BasicProviderJob.cancel" name="cancel" signature="cancel()">
    Attempt to cancel the job.
  </Function>

  ### cancelled

  <Function id="qiskit.providers.basic_provider.BasicProviderJob.cancelled" name="cancelled" signature="cancelled()">
    Return whether the job has been cancelled.

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")
  </Function>

  ### done

  <Function id="qiskit.providers.basic_provider.BasicProviderJob.done" name="done" signature="done()">
    Return whether the job has successfully run.

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")
  </Function>

  ### in\_final\_state

  <Function id="qiskit.providers.basic_provider.BasicProviderJob.in_final_state" name="in_final_state" signature="in_final_state()">
    Return whether the job is in a final job state such as `DONE` or `ERROR`.

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")
  </Function>

  ### job\_id

  <Function id="qiskit.providers.basic_provider.BasicProviderJob.job_id" name="job_id" signature="job_id()">
    Return a unique id identifying the job.

    **Return type**

    [str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")
  </Function>

  ### result

  <Function id="qiskit.providers.basic_provider.BasicProviderJob.result" name="result" signature="result(timeout=None)">
    Get job result .

    **Returns**

    Result object

    **Return type**

    [qiskit.result.Result](qiskit.result.Result "qiskit.result.Result")
  </Function>

  ### running

  <Function id="qiskit.providers.basic_provider.BasicProviderJob.running" name="running" signature="running()">
    Return whether the job is actively running.

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")
  </Function>

  ### status

  <Function id="qiskit.providers.basic_provider.BasicProviderJob.status" name="status" signature="status()">
    Gets the status of the job by querying the Python’s future

    **Returns**

    The current JobStatus

    **Return type**

    [qiskit.providers.JobStatus](qiskit.providers.JobStatus "qiskit.providers.JobStatus")
  </Function>

  ### submit

  <Function id="qiskit.providers.basic_provider.BasicProviderJob.submit" name="submit" signature="submit()">
    Submit the job to the backend for execution.

    **Raises**

    [**JobError**](providers#qiskit.providers.JobError "qiskit.providers.JobError") – if trying to re-submit the job.
  </Function>

  ### wait\_for\_final\_state

  <Function id="qiskit.providers.basic_provider.BasicProviderJob.wait_for_final_state" name="wait_for_final_state" signature="wait_for_final_state(timeout=None, wait=5, callback=None)">
    Poll the job status until it progresses to a final state such as `DONE` or `ERROR`.

    **Parameters**

    *   **timeout** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)") *| None*) – Seconds to wait for the job. If `None`, wait indefinitely.

    *   **wait** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")) – Seconds between queries.

    *   **callback** ([*Callable*](https://docs.python.org/3/library/typing.html#typing.Callable "(in Python v3.12)") *| None*) –

        Callback function invoked after each query. The following positional arguments are provided to the callback function:

        *   job\_id: Job ID
        *   job\_status: Status of the job from the last query
        *   job: This BaseJob instance

        Note: different subclass might provide different arguments to the callback function.

    **Raises**

    [**JobTimeoutError**](providers#qiskit.providers.JobTimeoutError "qiskit.providers.JobTimeoutError") – If the job does not reach a final state before the specified timeout.
  </Function>
</Class>

